# coremark

./: .gitmodules  SConscript  core_main.c
esp32/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
esp32/main/: CMakeLists.txt  app_main.c
esp32/main/coremark/: core_portme.h
esp32/main/posix/: core_portme.c  core_portme.h
rt-thread/: core_portme.c  core_portme.h
